WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231440
Fix build break after
r283796
when ENABLE_SERVICE_WORKER is off
https://bugs.webkit.org/show_bug.cgi?id=231440
Summary
Fix build break after r283796 when ENABLE_SERVICE_WORKER is off
Basuke Suzuki
Reported
2021-10-08 11:32:12 PDT
That is still experimental feature in PLAYSTATION and WinCairo.
Attachments
PATCH
(1.35 KB, patch)
2021-10-08 12:16 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2021-10-08 12:16:37 PDT
Created
attachment 440656
[details]
PATCH
EWS
Comment 2
2021-10-08 13:01:25 PDT
Committed
r283834
(
242714@main
): <
https://commits.webkit.org/242714@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440656
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-08 13:02:20 PDT
<
rdar://problem/84039884
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug