Fix build break after r283796 when ENABLE_SERVICE_WORKER is off https://bugs.webkit.org/show_bug.cgi?id=231440

Unreviewed build fix.


* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::hasServiceWorkerBackgroundActivityForTesting const):


Canonical link: https://commits.webkit.org/242714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283834 268f45cc-cd09-0410-ab3c-d52691b4dbfc